--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -1797,8 +1797,8 @@ input.i-modified,
 	background-color: #edeeee;
 }
 .i-table .i-selected {
-	background: #d5dde0;
-	color: #456572;
+	background: #57a7ed;
+	color: #fff;
 }
 .i-table-row td,
 .i-table-row-odd td {
@@ -1813,7 +1813,7 @@ input.i-modified,
 }
 
 /* Fix textfield size to correspond label size inside table */
-.i-table-cell-content input.i-textfield,
+.i-table-cell-content .i-textfield,
 .i-table-cell-content .i-button {
 	margin: -2px 0 -2px -3px;
 }
