--- a/WebContent/ITMILL/themes/default/gridlayout/gridlayout.css
+++ b/WebContent/ITMILL/themes/default/gridlayout/gridlayout.css
@@ -19,10 +19,12 @@
 .i-gridlayout-spacing-on {
 	padding-left:8px;
 	padding-top:8px;
+	overflow:hidden;
 }
 .i-gridlayout-spacing-off {
 	padding-left:0px;
 	padding-top:0px;
+	overflow:hidden;
 }
 
 .i-gridlayout-spacing,
