--- a/WebContent/ITMILL/themes/tests-featurebrowser/layouts/featurebrowser-mainlayout.html
+++ b/WebContent/ITMILL/themes/tests-featurebrowser/layouts/featurebrowser-mainlayout.html
@@ -15,7 +15,8 @@
 		<tbody>
 			<tr>
 				<td valign="middle" align="center">
-				<table>
+				<table style="width:100%" cellspacing="0" cellpadding="0"
+		border="0">
 					<tbody>
 						<tr>
 							<td style="text-align: left;"  location="demo">
