Fix for #2296 - Added overflow attributes to make size calculations correct for CustomLayout and CustomComponent
svn changeset:6161 branch:trunk

--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -455,6 +455,16 @@ input.i-modified,
 	margin-left: 0px;
 }
 
+/* ./WebContent/ITMILL/themes/default/customcomponent/customcomponent.css */
+.i-customcomponent {
+	overflow: hidden;
+}
+
+/* ./WebContent/ITMILL/themes/default/customlayout/customlayout.css */
+.i-customlayout {
+	overflow: hidden;
+}
+
 /* ./WebContent/ITMILL/themes/default/datefield/datefield.css */
 .i-datefield {
 	white-space: nowrap;
