--- a/WebContent/ITMILL/themes/sampler/sampler/styles.css
+++ b/WebContent/ITMILL/themes/sampler/sampler/styles.css
@@ -59,10 +59,17 @@
 	font-weight: bold;
 }
 
+.i-app-SamplerApplication .i-table-featuretable .i-table-body {
+	border: transparent;	
+}
+
 .i-app-SamplerApplication .i-panel-content-light {
 	border-top: 0px;
 }
 
+.i-app-SamplerApplication .feature-main {
+	padding-right: 6px;
+}
 .i-app-SamplerApplication .feature-controls {
 	padding-top: 10px;
 	margin-bottom: 20px;
