--- a/WebContent/ITMILL/themes/default/button/button.css
+++ b/WebContent/ITMILL/themes/default/button/button.css
@@ -29,6 +29,7 @@
 	padding-left: 10px;
 	padding-right: 10px;
 }
+
 /* fixes streched buttons in IE7 */
 *+html .i-button {
 	overflow: visible;
@@ -37,6 +38,11 @@
 	width: expression(this.offsetWidth + "px");
 }
 
+/* can't use expression hack in IE7 if lot's of button due 
+ * performance issues (as often in table). See #2329 */
+*+html .i-table .i-button {
+	width: auto;
+}
 	
 /* Error indicator on checkbox fix for IE6 */
 * html .i-checkbox * { display: block; float: left;}
