Button icons aligned middle.
svn changeset:6247 branch:trunk

--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -56,6 +56,11 @@
 }
 .i-button img {
 	display:inline;
+	vertical-align: middle;
+	margin-right: 3px;
+}
+.i-button span {
+	vertical-align: middle;
 }
 
 .i-button-link {
