--- a/WebContent/ITMILL/themes/default/formlayout/formlayout.css
+++ b/WebContent/ITMILL/themes/default/formlayout/formlayout.css
@@ -63,10 +63,16 @@
 	height: 20px
 }
 
-.i-form {
+.i-form fieldset {
 	border: none;
 	margin: 0;
 	padding: 0;
+}
+
+.i-form legend {
+	margin: 0;
+	padding: 0 0 0.3em 0;
+	font-weight: bold;
 }
 
 .i-form .i-caption .i-required-field-indicator {
