fixes #2373. refactored DOM structure of RTE toolbar
svn changeset:6319 branch:trunk

--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -2383,6 +2383,13 @@ input.i-modified,
 	border: 1px solid #b6b6b6;
 	overflow: hidden;
 }
+.i-richtextarea .gwt-RichTextToolbar .gwt-ToggleButton,
+.i-richtextarea .gwt-RichTextToolbar .gwt-PushButton {
+	float:left;
+}
+.i-richtextarea .gwt-RichTextToolbar {
+	white-space: nowrap;
+}
 .i-richtextarea .gwt-RichTextArea {
 	background: #fff url(textfield/img/bg.png) repeat-x;
 }
