--- a/WebContent/ITMILL/themes/default/textfield/textfield.css
+++ b/WebContent/ITMILL/themes/default/textfield/textfield.css
@@ -39,6 +39,13 @@
 	border: 1px solid #b6b6b6;
 	overflow: hidden;
 }
+.i-richtextarea .gwt-RichTextToolbar .gwt-ToggleButton,
+.i-richtextarea .gwt-RichTextToolbar .gwt-PushButton {
+	float:left;
+}
+.i-richtextarea .gwt-RichTextToolbar {
+	white-space: nowrap;
+}
 .i-richtextarea .gwt-RichTextArea {
 	background: #fff url(img/bg.png) repeat-x;
 }
