Test case and fix for #2407 - Caption missing for required field when using a non-default layout inside a Form
svn changeset:6357 branch:trunk

--- a/WebContent/ITMILL/themes/default/formlayout/formlayout.css
+++ b/WebContent/ITMILL/themes/default/formlayout/formlayout.css
@@ -74,6 +74,6 @@
 	font-weight: bold;
 }
 
-.i-form .i-caption .i-required-field-indicator {
+.i-formlayout-captioncell .i-caption .i-required-field-indicator {
 	float: none;
 }
