--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -762,7 +762,7 @@ input.i-modified,
 	font-weight: bold;
 }
 
-.i-form .i-caption .i-required-field-indicator {
+.i-formlayout-captioncell .i-caption .i-required-field-indicator {
 	float: none;
 }
 
