--- a/WebContent/ITMILL/themes/default/panel/panel.css
+++ b/WebContent/ITMILL/themes/default/panel/panel.css
@@ -16,8 +16,10 @@
 
 .i-panel-caption .i-errorindicator {
 	float: none;
-	padding-right:18px;
+	padding-right:20px;
 	display:inline;
+	background: transparent url(../icons/16/error.png) no-repeat bottom center;
+	
 }
 
 .i-panel-caption .i-icon {
