--- a/WebContent/ITMILL/themes/tests-tickets/styles.css
+++ b/WebContent/ITMILL/themes/tests-tickets/styles.css
@@ -1254,3 +1254,11 @@ padding:2px;
   border: none !important;
   color: #222222 !important;   
 }
+
+.dispnone {
+	display:none;
+}
+
+.redborder {
+	border: 1px solid red;
+}
