fixes #2427, disabling link component
svn changeset:6442 branch:trunk

--- a/WebContent/ITMILL/themes/default/common/common.css
+++ b/WebContent/ITMILL/themes/default/common/common.css
@@ -214,6 +214,10 @@ input.i-modified,
 	vertical-align: middle;
 }
 
+.i-disabled a {
+	cursor: default;
+}
+
 .i-link img {
 	vertical-align: middle;
 }
