Trying to liven up Sampler theme w/ minor adjustments
svn changeset:6455 branch:trunk

--- a/WebContent/ITMILL/themes/sampler/sampler/styles.css
+++ b/WebContent/ITMILL/themes/sampler/sampler/styles.css
@@ -74,6 +74,9 @@
 	border-top: 0px;
 }
 
+.i-app-SamplerApplication .i-panel-feature-main {
+	background: transparent url(grayfade.png) repeat-x;
+}
 .i-app-SamplerApplication .i-caption-feature-controls {
 	font-weight: bold;
 	font-size: 16px;
@@ -89,12 +92,14 @@
 	line-height: 20px;
 }
 .i-app-SamplerApplication .feature-info .i-panel-caption {
-	color: #fff;
+	color: #def;
 	font-size: 22px;
 	font-weight: bold;
-	line-height: 35px;
+	line-height: 25px;
 }
-
+.i-app-SamplerApplication .feature-info .i-panel-content {
+	background: transparent url(finfofade.png) no-repeat 0px 5px;
+}
 .i-app-SamplerApplication .feature-info .i-caption {
 	font-weight: bold;
 	font-size: 16px;
