fixes #2424, our iView is nosdays positioned -> no calculations needed anymore. Now position can also be set in theme.
svn changeset:6460 branch:trunk

--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -416,6 +416,14 @@ input.i-modified,
 .i-loading-indicator-wait {
 	background: transparent url(common/img/loading-indicator-wait.gif);
 }
+.i-loading-indicator,
+.i-loading-indicator-delay,
+.i-loading-indicator-wait {
+	position: absolute;
+	top:6px;
+	right: 5px;	
+	z-index:30000;
+}
 
 /* debug dialog */
 .i-debug-console {
