--- a/WebContent/ITMILL/themes/sampler/sampler/styles.css
+++ b/WebContent/ITMILL/themes/sampler/sampler/styles.css
@@ -56,16 +56,16 @@
 	margin-left: -3px;
 }
 
-.i-app-SamplerApplication tr.i-table-row,
-.i-app-SamplerApplication tr.i-table-row-odd {
+.i-app-SamplerApplication .i-table-featuretable tr.i-table-row,
+.i-app-SamplerApplication .i-table-featuretable tr.i-table-row-odd {
 	height: 50px;
 }
-.i-app-SamplerApplication tr.i-table-row-section {
+.i-app-SamplerApplication .i-table-featuretable tr.i-table-row-section {
 	color: #333366;
 	font-size: 18px;
 	font-weight: bold;
 }
-.i-app-SamplerApplication tr.i-table-row-subsection {
+.i-app-SamplerApplication .i-table-featuretable tr.i-table-row-subsection {
 	font-size: 16px;
 	font-weight: bold;
 }
