unified combobox read only with textfields (simply show value)
svn changeset:6559 branch:trunk

--- a/WebContent/ITMILL/themes/default/select/select.css
+++ b/WebContent/ITMILL/themes/default/select/select.css
@@ -112,6 +112,15 @@
 	background-position: top left;
 }
 
+.i-filterselect.i-readonly .i-filterselect-button {
+	display: none;
+}
+
+.i-filterselect.i-readonly .i-filterselect-input {
+	background: transparent;
+	color: black;
+}
+
 .i-filterselect-suggestpopup {
 	background: #f6f7f7;
 	border: 1px solid #b6bbbc;
