--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -1333,6 +1333,15 @@ input.i-modified,
 	background-position: top left;
 }
 
+.i-filterselect.i-readonly .i-filterselect-button {
+	display: none;
+}
+
+.i-filterselect.i-readonly .i-filterselect-input {
+	background: transparent;
+	color: black;
+}
+
 .i-filterselect-suggestpopup {
 	background: #f6f7f7;
 	border: 1px solid #b6bbbc;
